err.txt
Traceback (most recent call last):
  File "/usr/lib/python3.8/runpy.py", line 194, in _run_module_as_main
    return _run_code(code, main_globals, None,
  File "/usr/lib/python3.8/runpy.py", line 87, in _run_code
    exec(code, run_globals)
  File "/usr/lib/python3.8/unittest/__main__.py", line 18, in <module>
    main(module=None)
  File "/usr/lib/python3.8/unittest/main.py", line 100, in __init__
    self.parseArgs(argv)
  File "/usr/lib/python3.8/unittest/main.py", line 147, in parseArgs
    self.createTests()
  File "/usr/lib/python3.8/unittest/main.py", line 158, in createTests
    self.test = self.testLoader.loadTestsFromNames(self.testNames,
  File "/usr/lib/python3.8/unittest/loader.py", line 220, in loadTestsFromNames
    suites = [self.loadTestsFromName(name, module) for name in names]
  File "/usr/lib/python3.8/unittest/loader.py", line 220, in <listcomp>
    suites = [self.loadTestsFromName(name, module) for name in names]
  File "/usr/lib/python3.8/unittest/loader.py", line 154, in loadTestsFromName
    module = __import__(module_name)
  File "/mnt/c/GIT/ME/AirBnB_clone/tests/test_models/__init__.py", line 3, in <module>
    from .test_base_model import TestBaseModel
  File "/mnt/c/GIT/ME/AirBnB_clone/tests/test_models/test_base_model.py", line 12, in <module>
    from models.base_model import BaseModel
  File "/mnt/c/GIT/ME/AirBnB_clone/models/__init__.py", line 1, in <module>
    from .engine import FileStorage
  File "/mnt/c/GIT/ME/AirBnB_clone/models/engine/__init__.py", line 3, in <module>
    from .file_storage import FileStorage
  File "/mnt/c/GIT/ME/AirBnB_clone/models/engine/file_storage.py", line 59
    match (id):
              ^
SyntaxError: invalid syntax
